--- a/backend/templates/create_assignment.html
+++ b/backend/templates/create_assignment.html
@@ -57,7 +57,46 @@
         <h2>Add New Assignment</h2>
         <form method="post" action="">
             {% csrf_token %}
-            {{ assignment_form.as_p }}
+            <div class="form-group">
+                <label for="id_title">Title:</label>
+                {{ assignment_form.title }}
+            </div>
+            <div class="form-group">
+                <label for="id_description">Description:</label>
+                {{ assignment_form.description }}
+            </div>
+            <div class="form-group">
+                <label for="id_assignment_type">Type:</label>
+                {{ assignment_form.assignment_type }}
+            </div>
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="id_start_date">Start Date:</label>
+                    {{ assignment_form.start_date }}
+                </div>
+                <div class="form-group">
+                    <label for="id_start_time">Start Time:</label>
+                    {{ assignment_form.start_time }}
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="id_due_date">Due Date:</label>
+                    {{ assignment_form.due_date }}
+                </div>
+                <div class="form-group">
+                    <label for="id_due_time">Due Time:</label>
+                    {{ assignment_form.due_time }}
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="id_extra_time_period">Extra Time (days):</label>
+                {{ assignment_form.extra_time_period }}
+            </div>
+            <div class="form-group">
+                <label for="id_module">Module (optional):</label>
+                {{ assignment_form.module }}
+            </div>
             <button type="submit" name="add_assignment" class="btn">Add Assignment</button>
         </form>
     </div>
